--- a/website/src/styles/index.css
+++ b/website/src/styles/index.css
@@ -48,7 +48,7 @@
 
 .icon-link {
   @apply inline-block;
-  @apply w-5 h-5;
+  @apply h-5 w-5;
   @apply mr-2;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke-width='1.5' stroke='black'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='M13.19 8.688a4.5 4.5 0 011.242 7.244l-4.5 4.5a4.5 4.5 0 01-6.364-6.364l1.757-1.757m13.35-.622l1.757-1.757a4.5 4.5 0 00-6.364-6.364l-4.5 4.5a4.5 4.5 0 001.242 7.244' /%3E%3C/svg%3E%0A");
 }
