--- a/website/src/pages/index.astro
+++ b/website/src/pages/index.astro
@@ -40,7 +40,7 @@ import Layout from "@/layouts/base/layout.astro";
         and open sourced some of my own work. My OSS work is available on my
         <a href={SOCIAL_MEDIA.github.link}>GitHub account</a>. For more info
         about my career check out my hopefully only slightly outdated
-        <a href="resume.pdf">resume</a>.
+        <a href="resume.pdf" data-astro-prefetch="false">resume</a>.
       </p>
     </div>
     <div>
