--- a/website/src/layouts/base/header/nav.astro
+++ b/website/src/layouts/base/header/nav.astro
@@ -29,11 +29,12 @@ const { routes, links } = Astro.props;
 </div>
 <div class="flex items-center space-x-4 -md:mt-4 -md:pl-4">
   {
-    Object.entries(links).map(([name, { link, icon: Icon }]) => (
+    Object.entries(links).map(([name, { link, icon: Icon, data }]) => (
       <a
         href={link}
         title={name.toLowerCase()}
         aria-label={name.toLocaleLowerCase()}
+        {...data}
       >
         <Icon />
       </a>
