--- a/website/src/layouts/base/layout.astro
+++ b/website/src/layouts/base/layout.astro
@@ -25,11 +25,11 @@ const routes: Route[] = [
   },
   {
     name: "Blog",
-    href: "/blog",
+    href: "/blog/",
   },
   {
     name: "TIL",
-    href: "/til",
+    href: "/til/",
   },
 ];
 
