fix initial theme setting, formatting

--- a/website/src/layouts/base/theme/theme-toggle.astro
+++ b/website/src/layouts/base/theme/theme-toggle.astro
@@ -35,7 +35,21 @@
 
 <script>
   import { Theme, THEME_KEY } from "./config";
-  import { setInitialTheme } from "./script";
+
+  const setInitialTheme = () => {
+    if (
+      localStorage.getItem(THEME_KEY) === "dark" ||
+      (!(THEME_KEY in localStorage) &&
+        window.matchMedia &&
+        window.matchMedia("(prefers-color-scheme: dark)").matches)
+    ) {
+      document.documentElement.classList.add("dark");
+      localStorage.setItem(THEME_KEY, "dark");
+    } else {
+      document.documentElement.classList.remove("dark");
+      localStorage.setItem(THEME_KEY, "light");
+    }
+  };
 
   const updateThemeClass = (theme: Theme) => {
     if (theme === Theme.Light) {
