--- a/website/src/layouts/base/layout.astro
+++ b/website/src/layouts/base/layout.astro
@@ -38,7 +38,7 @@ const links: Record<string, IconLink> = {
     icon: RssIcon,
     link: "/feed.xml",
     data: {
-      "data-astro-prefetch": "false"
+      "data-astro-prefetch": "false",
     },
   },
   ...SOCIAL_MEDIA,
@@ -65,7 +65,32 @@ const tags = {
       ))
     }
     <title>{`${title} | ${TITLE}`}</title>
-    <script src="./theme/script.ts"></script>
+    <script is:inline>
+      const THEME_KEY = "__theme__";
+
+      const setInitialTheme = () => {
+        if (
+          localStorage.getItem(THEME_KEY) === "dark" ||
+          (!(THEME_KEY in localStorage) &&
+            window.matchMedia &&
+            window.matchMedia("(prefers-color-scheme: dark)").matches)
+        ) {
+          document.documentElement.classList.add("dark");
+          localStorage.setItem(THEME_KEY, "dark");
+        } else {
+          document.documentElement.classList.remove("dark");
+          localStorage.setItem(THEME_KEY, "light");
+        }
+      };
+
+      setInitialTheme();
+
+      const observer = new MutationObserver(setInitialTheme);
+      observer.observe(document.documentElement, {
+        childList: true,
+        subtree: false,
+      });
+    </script>
     <ViewTransitions />
   </head>
   <body class="dark:text-whiteish">
