--- a/website/src/pages/404.astro
+++ b/website/src/pages/404.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from "@/layouts/base/layout.astro"
+import Layout from "@/layouts/base/layout.astro";
 ---
 
 <Layout title="404">
@@ -9,11 +9,9 @@ import Layout from "@/layouts/base/layout.astro"
       <div class="border-l border-black px-4 py-4 dark:border-whiteish">
         <h2 class="text-xl md:text-2xl">Page Not Found</h2>
         <div class="flex space-x-1">
-          <button class="underline" data-go-back>
-            Go back
-          </button>
+          <button class="underline" data-go-back>Go back</button>
           <div>&middot;</div>
-            <a href="/" class="font-normal underline">Home</a>
+          <a href="/" class="font-normal underline">Home</a>
         </div>
       </div>
     </div>
@@ -22,12 +20,10 @@ import Layout from "@/layouts/base/layout.astro"
 
 <script>
   const setUpGoBackButton = () => {
-    const navigationToggleButton = document.querySelector(
-      "[data-go-back]"
-    );
+    const navigationToggleButton = document.querySelector("[data-go-back]");
 
     navigationToggleButton?.addEventListener("click", () => {
-      history.back()
+      history.back();
     });
   };
 
