--- a/website/src/layouts/post/post-footer.astro
+++ b/website/src/layouts/post/post-footer.astro
@@ -28,8 +28,8 @@ const { discussion } = Astro.props;
   <p>
     If you've come this far with the article you may want to know a thing or two
     <a href="/">about me</a> if you don't already. You can also read other
-    <a href="/blog">blog posts</a> or about stuff
-    <a href="/til">I've learned</a> recently.
+    <a href="/blog/">blog posts</a> or about stuff
+    <a href="/til/">I've learned</a> recently.
   </p>
   <p class="pt-3">
     This website is{" "}
