update copy button style tooltip

--- a/website/src/components/share-buttons.astro
+++ b/website/src/components/share-buttons.astro
@@ -22,11 +22,13 @@ import CopyIcon from "@/components/icons/copy.astro";
     class={"absolute -top-8 right-1 flex-col items-end hidden"}
     data-url-copied-tooltip
   >
-    <div class="top-0 rounded-sm bg-black px-2 py-1 text-xs text-white">
+    <div
+      class="top-0 rounded-sm bg-black px-2 py-1 text-xs text-white dark:bg-[#2F3336]"
+    >
       URL Copied
     </div>
     <div
-      class="mr-1 h-0 w-0 border-l-[6px] border-r-[6px] border-t-[8px] border-black border-l-transparent border-r-transparent"
+      class="mr-1 h-0 w-0 border-l-[6px] border-r-[6px] border-t-[8px] border-black border-l-transparent border-r-transparent dark:border-[#2F3336] dark:border-l-transparent dark:border-r-transparent"
     >
     </div>
   </div>
