--- a/website/src/layouts/post/layout.astro
+++ b/website/src/layouts/post/layout.astro
@@ -29,7 +29,8 @@ const { Content } = await post.render();
   <article>
     <ProgressBar />
     <div
-      class="mx-auto max-w-4xl border-b border-solid dark:border-neutral-400"
+      class={"mx-auto max-w-4xl dark:border-neutral-400" +
+        (coverImage ? "" : " border-b border-solid")}
     >
       <h1
         class="mb-8 text-center text-4xl font-bold leading-tight tracking-tighter md:text-5xl md:leading-none"
