--- a/website/src/layouts/base/layout.astro
+++ b/website/src/layouts/base/layout.astro
@@ -58,7 +58,10 @@ const tags = {
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="alternate" type="application/rss+xml" href="/feed.xml" />
-    <link rel="canonical" href={join(WEBSITE_URL, Astro.url.pathname)} />
+    <link
+      rel="canonical"
+      href={new URL(Astro.url.pathname, WEBSITE_URL).href}
+    />
     {
       Object.entries(tags).map(([name, content]) => (
         <meta name={name} content={content} />
