--- a/website/src/pages/index.astro
+++ b/website/src/pages/index.astro
@@ -46,12 +46,12 @@ import Layout from "@/layouts/base/layout.astro";
     <div>
       <h3 class="mb-4 mt-8">About this website</h3>
       <p>
-        Appart from being a central part of my online presence, my goal with
-        this website is to write about stuff I find important and interesting.
-        I've noticed a widening gap between my experiences, especially as a
-        software developer, and stuff that's being written about, so I'm trying
-        to close that gap. When it comes to tech behind the website, it's a
-        static site built with Next.js and hosted on Cloudflare Pages.
+        Apart from being a central part of my online presence, my goal with this
+        website is to write about stuff I find important and interesting. I've
+        noticed a widening gap between my experiences, especially as a software
+        developer, and stuff that's being written about, so I'm trying to close
+        that gap. When it comes to tech behind the website, it's a static site
+        built with Next.js and hosted on Cloudflare Pages.
       </p>
     </div>
     <div>
