replace nextjs with astro

--- a/website/src/pages/index.astro
+++ b/website/src/pages/index.astro
@@ -51,7 +51,7 @@ import Layout from "@/layouts/base/layout.astro";
         noticed a widening gap between my experiences, especially as a software
         developer, and stuff that's being written about, so I'm trying to close
         that gap. When it comes to tech behind the website, it's a static site
-        built with Next.js and hosted on Cloudflare Pages.
+        built with Astro and hosted on Cloudflare Pages.
       </p>
     </div>
     <div>
