remove og image

--- a/website/src/pages/index.astro
+++ b/website/src/pages/index.astro
@@ -1,13 +1,9 @@
 ---
-import { WEBSITE_URL } from "@/config";
 import { SOCIAL_MEDIA } from "@/constants/social-media";
 import Layout from "@/layouts/base/layout.astro";
 ---
 
-<Layout
-  title="About"
-  meta={{ ogImage: `${WEBSITE_URL}/assets/og-image-vWI8A9IlFTgoEQF8bUsQS.jpg` }}
->
+<Layout title="About">
   <div class="mx-auto max-w-4xl pb-10 md:pb-0 xl:pb-10 2xl:pb-0">
     <div>
       <h3 class="mb-4">About me</h3>
