--- a/website/src/layouts/base/layout.astro
+++ b/website/src/layouts/base/layout.astro
@@ -104,7 +104,7 @@ const tags = {
   </head>
   <body class="dark:text-whiteish">
     <Header routes={routes} links={links} />
-    <main class="mx-auto max-w-6xl px-5">
+    <main class="mx-auto max-w-6xl px-5" transition:animate="none">
       <slot />
     </main>
     <GoToTopButton />
