remove smooth scroll

--- a/website/src/layouts/base/go-to-top-button.astro
+++ b/website/src/layouts/base/go-to-top-button.astro
@@ -22,9 +22,7 @@
   const setUpGoToTopButton = () => {
     const goToTopButton = document.querySelector("button[data-go-to-top]");
 
-    goToTopButton?.addEventListener("click", () =>
-      window.scrollTo({ top: 0, behavior: "smooth" })
-    );
+    goToTopButton?.addEventListener("click", () => window.scrollTo({ top: 0 }));
 
     const visibilityToggle = () => {
       const scrollTop =
