--- a/website/src/layouts/posts/post-list.astro
+++ b/website/src/layouts/posts/post-list.astro
@@ -15,12 +15,12 @@ const { posts } = Astro.props;
 <section>
   <div class="mb-10 space-y-6">
     {
-      posts.map(({ slug, data: { title, date, description } }) => (
+      posts.map(({ id, data: { title, date, description } }) => (
         <div class="mx-auto max-w-3xl bg-gray-100 p-4 pb-4 dark:bg-[#1e2022] dark:bg-opacity-80">
           <h2 class="text-xl font-bold leading-snug md:text-3xl">
             <a
               class="hover:underline"
-              href={`${join(Astro.url.pathname, slug)}/`}
+              href={`${join(Astro.url.pathname, id)}/`}
             >
               {title}
             </a>
