--- a/website/src/pages/index.astro
+++ b/website/src/pages/index.astro
@@ -11,8 +11,11 @@ import Layout from "@/layouts/base/layout.astro";
         Hi, I'm Aleksa Ćuković, a software engineer from Montenegro. I enjoy
         solving problems and building things. I especially like building stuff
         that I can use myself, hence I prefer to work on infrastructure and
-        developer tooling. When I'm not working I'm probably hanging out with my
-        friends and family, lifting weights, playing basketball or playing EU4.
+        developer tooling. When I'm not working I'm probably hacking on my side
+        projects, hanging out with my friends and family, lifting weights,
+        playing basketball or traveling. Check out my <a href="now/">now page</a
+        >
+        to see what I've been up to lately.
         <br />
         <br />
         Not long ago my main interest was AI/ML. My main contribution to the field
@@ -30,12 +33,13 @@ import Layout from "@/layouts/base/layout.astro";
         focusing on your business, hit me up, I might be able to help with that.
         <br />
         <br />
-        When it comes to coding I'm most comfortable with JavaScript/TypeScript and
-        Python, but lately I've been picking up a bit of Go and Rust. I'm passionate
-        about open source and have made many small contributions to various projects
-        and open sourced some of my own work. My OSS work is available on my
-        <a href={SOCIAL_MEDIA.github.link}>GitHub account</a>. For more info
-        about my career check out my hopefully only slightly outdated
+        For most of my career I've been working with JavaScript/TypeScript and Python,
+        but lately I've been mostly using Go, and I would love to work more with
+        Rust. I'm passionate about open source and have made many small contributions
+        to various projects and open sourced some of my own work. My OSS work is
+        available on my <a href={SOCIAL_MEDIA.github.link}>GitHub account</a>.
+        For more info about my career check out my hopefully only slightly
+        outdated
         <a href="resume.pdf" data-astro-prefetch="false">resume</a>.
       </p>
     </div>
@@ -53,12 +57,12 @@ import Layout from "@/layouts/base/layout.astro";
     <div>
       <h3 class="mb-4 mt-8">Contact</h3>
       <p>
-        If you'd like to reach out feel free to send me an email at{" "}
-        <a href="mailto:hello@aleksac.me">hello@aleksac.me</a>. Since I've only
-        had positive experience with people reaching out, my DMs are open and
-        you can contact me on{" "}
-        <a href={SOCIAL_MEDIA.twitter.link}>twitter</a> and{" "}
-        <a href={SOCIAL_MEDIA.instagram.link}>instagram</a>.
+        If you'd like to reach out feel free to send me an email at
+        <a href="mailto:hello@aleksac.me">hello@aleksac.me</a>. Since I've
+        mostly had positive experience with people reaching out, my DMs are open
+        and you can contact me on
+        <a href={SOCIAL_MEDIA.twitter.link}>twitter</a>
+        and <a href={SOCIAL_MEDIA.instagram.link}>instagram</a>.
       </p>
     </div>
   </div>
