--- a/website/src/layouts/base/layout.astro
+++ b/website/src/layouts/base/layout.astro
@@ -69,7 +69,7 @@ const tags = {
     {
       /*
       This script needs to be added inline to avoid flickering when dark theme is used,
-      astro doesn't process inline scripts and processed scripts are always loaded
+      Astro doesn't process inline scripts and processed scripts are always loaded
       as type="module" so code needs to be duplicated
       see: https://docs.astro.build/en/guides/client-side-scripts
       */
