--- a/website/src/layouts/post/post-footer.astro
+++ b/website/src/layouts/post/post-footer.astro
@@ -11,7 +11,7 @@ const { discussion } = Astro.props;
 <div
   class="mx-auto mb-14 flex max-w-3xl flex-col items-center space-y-2 border-t px-2 pt-4 text-center md:mt-10 md:px-4"
 >
-  <div class="flex items-center space-x-4">
+  <div class="flex items-center gap-x-4">
     <div>Share:</div>
     <ShareButtons />
   </div>
