--- a/website/src/pages/index.astro
+++ b/website/src/pages/index.astro
@@ -26,7 +26,7 @@ import Layout from "@/layouts/base/layout.astro";
       </p>
     </div>
     <div>
-      <h3 class="mb-4 mt-8">About my work</h3>
+      <h3 class="mt-8 mb-4">About my work</h3>
       <p>
         Currently I'm getting paid to build infrastructure on AWS and
         Kubernetes. If you're doing the same but would rather spend more time
@@ -44,7 +44,7 @@ import Layout from "@/layouts/base/layout.astro";
       </p>
     </div>
     <div>
-      <h3 class="mb-4 mt-8">About this website</h3>
+      <h3 class="mt-8 mb-4">About this website</h3>
       <p>
         Apart from being a central part of my online presence, my goal with this
         website is to write about stuff I find important and interesting. I've
@@ -55,7 +55,7 @@ import Layout from "@/layouts/base/layout.astro";
       </p>
     </div>
     <div>
-      <h3 class="mb-4 mt-8">Contact</h3>
+      <h3 class="mt-8 mb-4">Contact</h3>
       <p>
         If you'd like to reach out feel free to send me an email at
         <a href="mailto:hello@aleksac.me">hello@aleksac.me</a>. Since I've
