--- a/website/src/components/progress-bar.astro
+++ b/website/src/components/progress-bar.astro
@@ -1,5 +1,5 @@
 <div
-  class="fixed left-0 top-0 z-10 h-1 rounded-r-sm bg-black dark:bg-whiteish"
+  class="dark:bg-whiteish fixed top-0 left-0 z-10 h-1 rounded-r-sm bg-black"
   data-progress-bar
 >
 </div>
