--- a/website/src/layouts/base/header/header.astro
+++ b/website/src/layouts/base/header/header.astro
@@ -14,12 +14,12 @@ const { routes, links } = Astro.props;
 
 <header class="mb-6 border-b border-current md:mb-12">
   <nav
-    class="mx-auto flex max-w-6xl items-center justify-between px-5 pb-4 pt-5 leading-tight tracking-tight md:pb-8 md:pt-8 md:tracking-tighter"
+    class="mx-auto flex max-w-6xl items-center justify-between px-5 pt-5 pb-4 leading-tight tracking-tight md:pt-8 md:pb-8 md:tracking-tighter"
   >
     <a class="text-2xl font-bold hover:no-underline md:text-4xl" href="/">
       Aleksa Cukovic
     </a>
-    <div class="flex items-center space-x-4">
+    <div class="flex items-center gap-x-4">
       <ThemeToggle />
       <button
         class="md:hidden"
@@ -27,19 +27,19 @@ const { routes, links } = Astro.props;
         data-navigation-toggle
       >
         <div class="relative hidden rotate-45" data-navigation-toggle-hide>
-          <div class="h-1 w-6 bg-black dark:bg-whiteish"></div>
+          <div class="dark:bg-whiteish h-1 w-6 bg-black"></div>
           <div
-            class="absolute top-0 h-1 w-6 rotate-90 bg-black dark:bg-whiteish"
+            class="dark:bg-whiteish absolute top-0 h-1 w-6 rotate-90 bg-black"
           >
           </div>
         </div>
         <div class="space-y-1" data-navigation-toggle-show>
-          <div class="h-1 w-6 bg-black dark:bg-whiteish"></div>
-          <div class="h-1 w-6 bg-black dark:bg-whiteish"></div>
-          <div class="h-1 w-6 bg-black dark:bg-whiteish"></div>
+          <div class="dark:bg-whiteish h-1 w-6 bg-black"></div>
+          <div class="dark:bg-whiteish h-1 w-6 bg-black"></div>
+          <div class="dark:bg-whiteish h-1 w-6 bg-black"></div>
         </div>
       </button>
-      <div class="hidden space-x-4 md:flex md:text-2xl">
+      <div class="hidden gap-x-4 md:flex md:text-2xl">
         <Nav routes={routes} links={links} />
       </div>
     </div>
