--- a/website/src/layouts/post/layout.astro
+++ b/website/src/layouts/post/layout.astro
@@ -33,7 +33,7 @@ const { Content } = await render(post);
         (coverImage ? "" : " border-b border-solid")}
     >
       <h1
-        class="mb-8 text-center text-4xl font-bold leading-tight tracking-tighter md:text-5xl md:leading-none"
+        class="mb-8 text-center text-4xl leading-tight font-bold tracking-tighter md:text-5xl md:leading-none"
       >
         {title}
       </h1>
