--- a/website/src/layouts/post/post-body.astro
+++ b/website/src/layouts/post/post-body.astro
@@ -5,6 +5,8 @@
 </div>
 
 <style is:global>
+  @reference "../../styles/index.css"
+
   .markdown {
     @apply leading-relaxed md:text-lg;
   }
@@ -21,10 +23,10 @@
   }
 
   .markdown h2 {
-    @apply mb-4 mt-12 text-2xl leading-snug md:text-3xl;
+    @apply mt-12 mb-4 text-2xl leading-snug md:text-3xl;
   }
 
   .markdown h3 {
-    @apply mb-4 mt-8 text-xl leading-snug md:text-2xl;
+    @apply mt-8 mb-4 text-xl leading-snug md:text-2xl;
   }
 </style>
