--- a/website/src/layouts/posts/post-list.astro
+++ b/website/src/layouts/posts/post-list.astro
@@ -16,8 +16,8 @@ const { posts } = Astro.props;
   <div class="mb-10 space-y-6">
     {
       posts.map(({ id, data: { title, date, description } }) => (
-        <div class="mx-auto max-w-3xl bg-gray-100 p-4 pb-4 dark:bg-[#1e2022] dark:bg-opacity-80">
-          <h2 class="text-xl font-bold leading-snug md:text-3xl">
+        <div class="dark:bg-opacity-80 mx-auto max-w-3xl bg-gray-100 p-4 pb-4 dark:bg-[#1e2022]">
+          <h2 class="text-xl leading-snug font-bold md:text-3xl">
             <a
               class="hover:underline"
               href={`${join(Astro.url.pathname, id)}/`}
