fix style discrepancies

--- a/website/src/pages/now.astro
+++ b/website/src/pages/now.astro
@@ -20,7 +20,7 @@ const updatedAt = format(new Date(2024, 9, 9), "LLLL d, yyyy");
       </p>
     </div>
     <div class="space-y-4">
-      <h2 class="mt-6 mb-4 text-2xl leading-snug">Work</h2>
+      <h2 class="mt-6 mb-4 text-2xl leading-[1.2]">Work</h2>
       <p>
         I quit my job in August. It may have seemed out of the blue to some
         people, but I've been planning to quit for quite some time. I felt there
@@ -37,7 +37,7 @@ const updatedAt = format(new Date(2024, 9, 9), "LLLL d, yyyy");
         entrepreneurial ambitions, I don't think it's the right time to pursue
         them full time, so I decided to start looking for a new job.
       </p>
-      <h2 class="mt-6 mb-4 text-2xl leading-snug">Job Search</h2>
+      <h2 class="mt-6 mb-4 text-2xl leading-[1.2]">Job Search</h2>
       <p>
         This is the first time in my five-year long career that I'm going on a
         job search. All of my previous jobs and side gigs have been from
@@ -70,7 +70,7 @@ const updatedAt = format(new Date(2024, 9, 9), "LLLL d, yyyy");
         is some method to the madness. I learned a lot during this time and I'll
         probably do a longer write-up about my experience once I'm done.
       </p>
-      <h2 class="mt-6 mb-4 text-2xl leading-snug">Side Projects</h2>
+      <h2 class="mt-6 mb-4 text-2xl leading-[1.2]">Side Projects</h2>
       <p>
         I finally started working on the side project that's been brewing in my
         had for quite some time. I'm still not going to publicly reveal what it
@@ -88,7 +88,7 @@ const updatedAt = format(new Date(2024, 9, 9), "LLLL d, yyyy");
         in more established spaces while everyone's distracted with shoehorning
         an LLM into their product.
       </p>
-      <h2 class="mt-6 mb-4 text-2xl leading-snug">Gym</h2>
+      <h2 class="mt-6 mb-4 text-2xl leading-[1.2]">Gym</h2>
       <p>
         For the first time in almost a decade, I've been hitting the gym
         consistently, and it started showing. I'm the strongest I've ever been,
@@ -96,7 +96,7 @@ const updatedAt = format(new Date(2024, 9, 9), "LLLL d, yyyy");
         hitting all 5.5 workouts per week, but I do at least 4. When it comes to
         cardio I'm still in poor shape, but I'm planning to change that.
       </p>
-      <h2 class="mt-6 mb-4 text-2xl leading-snug">Traveling</h2>
+      <h2 class="mt-6 mb-4 text-2xl leading-[1.2]">Traveling</h2>
       <p>
         I visited Bucharest near the end of September. It wasn't what I
         expected, but overall I was pleasantly surprised. In a couple of days
@@ -106,7 +106,7 @@ const updatedAt = format(new Date(2024, 9, 9), "LLLL d, yyyy");
         ideas I have on hold until I finish my job search and settle into a new
         position.
       </p>
-      <h2 class="mt-6 mb-4 text-2xl leading-snug">Entertainment</h2>
+      <h2 class="mt-6 mb-4 text-2xl leading-[1.2]">Entertainment</h2>
       <p>
         I haven't been playing video games since April, and even though most of
         that time still isn't going towards something useful, I'm spending less
