--- a/website/src/layouts/post/post-body.astro
+++ b/website/src/layouts/post/post-body.astro
@@ -1,5 +1,5 @@
 <div class="mx-auto mt-6 max-w-3xl md:mt-16">
-  <div class="markdown">
+  <div class="markdown leading-[1.625] md:text-lg md:leading-[1.555]">
     <slot />
   </div>
 </div>
@@ -7,8 +7,8 @@
 <style is:global>
   @reference "../../styles/index.css"
 
+  /* @apply inside this class doesn't work, and everything breaks if it's removed */
   .markdown {
-    @apply leading-relaxed md:text-lg;
   }
 
   .markdown p,
@@ -23,10 +23,10 @@
   }
 
   .markdown h2 {
-    @apply mt-12 mb-4 text-2xl leading-snug md:text-3xl;
+    @apply mt-12 mb-4 text-2xl leading-[1.2] md:text-3xl;
   }
 
   .markdown h3 {
-    @apply mt-8 mb-4 text-xl leading-snug md:text-2xl;
+    @apply mt-8 mb-4 text-xl leading-[1.2] md:text-2xl;
   }
 </style>
