--- a/website/src/layouts/posts/post-list.astro
+++ b/website/src/layouts/posts/post-list.astro
@@ -17,7 +17,7 @@ const { posts } = Astro.props;
     {
       posts.map(({ id, data: { title, date, description } }) => (
         <div class="dark:bg-opacity-80 mx-auto max-w-3xl bg-gray-100 p-4 pb-4 dark:bg-[#1e2022]">
-          <h2 class="text-xl leading-snug font-bold md:text-3xl">
+          <h2 class="text-xl leading-[1.2] font-bold md:text-3xl">
             <a
               class="hover:underline"
               href={`${join(Astro.url.pathname, id)}/`}
