--- a/website/src/styles/index.css
+++ b/website/src/styles/index.css
@@ -11,9 +11,20 @@
 
   --color-whiteish: #d8d4cf;
   --color-blackish: #131516;
+
+  --spacing: 0.25rem;
 }
 
 @layer base {
+  *,
+  :before,
+  :after {
+    box-sizing: border-box;
+    border-width: 0;
+    border-style: solid;
+    border-color: #e5e7eb;
+  }
+
   p a {
     @apply text-blue-700 underline;
   }
@@ -26,7 +37,7 @@
   }
 
   h3 {
-    @apply text-2xl leading-snug font-semibold;
+    @apply text-2xl leading-[1.375] font-semibold;
   }
 
   pre {
