--- a/website/src/layouts/base/header/header.astro
+++ b/website/src/layouts/base/header/header.astro
@@ -27,16 +27,16 @@ const { routes, links } = Astro.props;
         data-navigation-toggle
       >
         <div class="relative hidden rotate-45" data-navigation-toggle-hide>
-          <div class="dark:bg-whiteish h-1 w-6 bg-black"></div>
+          <div class="h-1 w-6 bg-black dark:bg-whiteish"></div>
           <div
-            class="dark:bg-whiteish absolute top-0 h-1 w-6 rotate-90 bg-black"
+            class="absolute top-0 h-1 w-6 rotate-90 bg-black dark:bg-whiteish"
           >
           </div>
         </div>
         <div class="space-y-1" data-navigation-toggle-show>
-          <div class="dark:bg-whiteish h-1 w-6 bg-black"></div>
-          <div class="dark:bg-whiteish h-1 w-6 bg-black"></div>
-          <div class="dark:bg-whiteish h-1 w-6 bg-black"></div>
+          <div class="h-1 w-6 bg-black dark:bg-whiteish"></div>
+          <div class="h-1 w-6 bg-black dark:bg-whiteish"></div>
+          <div class="h-1 w-6 bg-black dark:bg-whiteish"></div>
         </div>
       </button>
       <div class="hidden gap-x-4 md:flex md:text-2xl">
