--- a/website/src/layouts/base/theme/theme-toggle.astro
+++ b/website/src/layouts/base/theme/theme-toggle.astro
@@ -1,5 +1,5 @@
 <button
-  class="dark:border-whiteish rounded-md border border-black p-1"
+  class="rounded-md border border-black p-1 dark:border-whiteish"
   aria-label="theme toggle"
   data-theme-toggle
 >
