--- a/website/src/pages/404.astro
+++ b/website/src/pages/404.astro
@@ -6,7 +6,7 @@ import Layout from "@/layouts/base/layout.astro";
   <div class="flex h-[80vh] items-center justify-center md:h-[60vh]">
     <div class="flex items-center">
       <h1 class="px-4 text-3xl font-medium md:text-4xl">404</h1>
-      <div class="dark:border-whiteish border-l border-black px-4 py-4">
+      <div class="border-l border-black px-4 py-4 dark:border-whiteish">
         <h2 class="text-xl md:text-2xl">Page Not Found</h2>
         <div class="flex space-x-1">
           <button class="underline" data-go-back>Go back</button>
