--- a/website/src/pages/now.astro
+++ b/website/src/pages/now.astro
@@ -3,125 +3,108 @@ import Layout from "@/layouts/base/layout.astro";
 
 import { format } from "date-fns";
 
-// NOTE: the months start from 0
-const updatedAt = format(new Date(2024, 9, 9), "LLLL d, yyyy");
+// NOTE: months start from 0
+const updatedAt = format(new Date(2025, 8, 7), "LLLL d, yyyy");
 ---
 
 <Layout title="Now">
   <div class="mx-auto max-w-4xl pb-10 md:pb-0 xl:pb-10">
     <div>
       <h1 class="text-3xl font-bold md:text-5xl">Now</h1>
-      <p class="pt-2 text-sm italic">
-        This page contains summary of what's been going on in my life lately.
-        I'll try to update it every couple of months, or when something big
-        happens. Many personal websites have now pages, and you can find some of
-        them on
-        <a href="https://nownownow.com/">nownownow</a>.
-      </p>
     </div>
     <div class="space-y-4">
-      <h2 class="mt-6 mb-4 text-2xl leading-[1.2]">Work</h2>
+      <h2 class="mt-8 mb-4 text-2xl leading-snug">Amsterdam</h2>
       <p>
-        I quit my job in August. It may have seemed out of the blue to some
-        people, but I've been planning to quit for quite some time. I felt there
-        wasn't much opportunity to grow left and other than occasional
-        interesting technical problem, the work wasn't fulfilling to me.
-        Initially I didn't plan on leaving until I found something else, but
-        there was an opportunity to take a voluntary exit during a company reorg
-        and leave with severance, so I took it.
+        I moved to Amsterdam in April. It's hard for me to describe my
+        experience so far without either going into too much detail or just
+        collapsing everything into a general "it's good". I didn't make big
+        changes to how I allocate my time since coming here, and since most of
+        my daily activities are location-agnostic, my life hasn't really changed
+        much. However, I do think that the small differences compound over time
+        and lead to very different outcomes.
 
-        <br /><br />
+        <br />
+        <br />
 
-        After leaving, I took a month-long break to recharge and rethink my
-        priorities and strategy going forward. While I still have
-        entrepreneurial ambitions, I don't think it's the right time to pursue
-        them full time, so I decided to start looking for a new job.
+        Overall, living here has been a great experience so far. Even the
+        weather hasn't been bad. I think moving to a different, preferably big
+        and developed city is a great experience in general, and I wish I had
+        done it sooner. It's still hard for me to tell if I'll stay here for
+        more than a couple of years or if I'll move back or even move somewhere
+        else, but I'm excited to keep trying things and see where that takes me.
       </p>
-      <h2 class="mt-6 mb-4 text-2xl leading-[1.2]">Job Search</h2>
+      <h2 class="mt-8 mb-4 text-2xl leading-snug">Work</h2>
       <p>
-        This is the first time in my five-year long career that I'm going on a
-        job search. All of my previous jobs and side gigs have been from
-        referrals. Up until this point I conducted more interviews as an
-        interviewer than an interviewee.
-
-        <br /><br />
-
-        I did some interviews with companies that reached out to me after
-        finding out I left my job, as well as some warmup interviews, and I've
-        been happy with the results. I've gotten much better at handling the
-        stress from the interviews, which was the main reason I've been avoiding
-        doing them for so long.
-
-        <br /><br />
-
-        Since I'm not in a rush to get a job, I'm focusing on companies and
-        positions that seem ideal for me. Unfortunately a large portion of
-        companies don't hire outside the US, even for remote positions, which
-        constricts the pool of available options. Going into this process I
-        expected to land more interviews, but it appears that I'm not as strong
-        of a candidate on paper. I mostly moved away from cold applications on
-        company websites towards a more personalized approach.
-
-        <br /><br />
-
-        I have mixed feelings about all of this so far. The market isn't great,
-        as everyone is telling, and the process is broken in most places I've
-        interviewed with, but I don't think the situation is that bad and there
-        is some method to the madness. I learned a lot during this time and I'll
-        probably do a longer write-up about my experience once I'm done.
+        I'm working as a site reliability engineer at
+        <a href="http://fareharbor.com/">FareHarbor</a> now. I feel like I can grow
+        and make an impact at this place, live comfortably in Amsterdam, my colleagues
+        are great and I can work remotely, so I'm happy with my new role.
       </p>
       <h2 class="mt-6 mb-4 text-2xl leading-[1.2]">Side Projects</h2>
       <p>
-        I finally started working on the side project that's been brewing in my
-        had for quite some time. I'm still not going to publicly reveal what it
-        is, but I hope to ship the first version soon. I have an initial design
-        draft and I made a decent progress on parser for the schema language
-        it's going to be based on. I'm using Go, and so far I'm happy with my
-        rate of progress and the quality of code I'm producing.
+        For the last couple of months I've been spending some nights and
+        weekends working on an unexpected side project. I've had the idea for it
+        for a while, but didn't really want to build it as I knew it would
+        require a decent amount of effort, but wouldn't really help me move
+        forward with my long-term goals.
 
-        <br /><br />
+        <br />
+        <br />
 
-        I'm still playing with and keeping track on AI. While there are some
-        good use cases, I still think it's more of a distraction than something
-        to build a product on or build into a product. I think there's a huge
-        amount of alpha in going the opposite direction, and building something
-        in more established spaces while everyone's distracted with shoehorning
-        an LLM into their product.
+        However, one night I started poking around the idea, and built a small
+        subset of functionality I had in mind. This was enough to trick me into
+        thinking that I'm not that far from the finish line and that I should
+        keep working on it. Now I'm very close to shipping, but it has taken
+        much more time than I anticipated after my early successes. It's been a
+        lot of fun, so I don't regret the time spent on it. If you're a
+        Terraform user, stay tuned for the announcement!
       </p>
-      <h2 class="mt-6 mb-4 text-2xl leading-[1.2]">Gym</h2>
+      <h2 class="mt-6 mb-4 text-2xl leading-[1.2]">Fitness</h2>
       <p>
-        For the first time in almost a decade, I've been hitting the gym
-        consistently, and it started showing. I'm the strongest I've ever been,
-        and if we ignore some belly fat, I look pretty good. I'm still not
-        hitting all 5.5 workouts per week, but I do at least 4. When it comes to
-        cardio I'm still in poor shape, but I'm planning to change that.
+        While I knew I won't be able to match my unemployment gym schedule, I
+        hoped to go at least three times a week. Unfortunately I am yet to hit
+        that target as of writing this. This is still much better than not going
+        at all, since I've mostly been able to maintain my strength level.
+
+        <br />
+        <br />
+
+        Part of the reason why I don't go to the gym as often as I'd like, is
+        because I kinda hate the one I'm going to. It's dirty, crowded and full
+        of people I don't find pleasant to be around. However, it's by far the
+        closest to my apartment and it's also much cheaper than the
+        alternatives. It's also open 24/7, which is also useful as I often can't
+        make it earlier in the day. I'll probably experiment more with my
+        schedule as well as get memberships to some other gyms to try to improve
+        the situation.
       </p>
       <h2 class="mt-6 mb-4 text-2xl leading-[1.2]">Traveling</h2>
       <p>
-        I visited Bucharest near the end of September. It wasn't what I
-        expected, but overall I was pleasantly surprised. In a couple of days
-        I'm going to visit Trieste with a big group of friends. It's going to be
-        a short trip, but I expect a lot of fun. As always, I'm looking for my
-        next destination. However, it's likely that I'm going to have to put any
-        ideas I have on hold until I finish my job search and settle into a new
-        position.
+        Traveling fell on my priority list since moving to Amsterdam. Partly
+        because there are plenty of places to explore in and around Amsterdam
+        itself, but also because I want to establish myself in Amsterdam, and it
+        would be harder to do so if I'm not there for extended periods of time.
+        I also wanted to make the most of the summer in Amsterdam, and save my
+        vacation for the (literal) rainy days.
+        <br />
+        <br />
+        Finally, I want to visit my home country every once in a while, and at this
+        point it comes from the same budget as traveling to other destinations, both
+        in terms of money and time. I just spent two weeks in Montenegro, and I don't
+        think I would've enjoyed more being in any other place.
       </p>
       <h2 class="mt-6 mb-4 text-2xl leading-[1.2]">Entertainment</h2>
       <p>
-        I haven't been playing video games since April, and even though most of
-        that time still isn't going towards something useful, I'm spending less
-        time behind a desk so I take it as a win.
-      </p>
-      <p>
-        I've been into murder mysteries lately. I watched Moonflower Murders,
-        and it was good, but not as good as its predecessor. Currently I'm
-        watching the fourth season of Only Murders in the Building, and I've
-        been loving it so far. In my opinion it's on par with the first season.
-        I liked the first season of Orphan Black but didn't continue, probably
-        because I've already read some spoilers and there are quite a few
-        episodes left.
+        I haven't been doing much in terms of entertainment since moving to
+        Amsterdam. It makes even less sense for me to play video games here, so
+        I'm continuing not to do that. A good TV show can be a nice way to relax
+        at the end of a busy day, but there haven't been many of them lately. I
+        picked up Foundation right before the season 3 started airing. It's
+        fine.
       </p>
     </div>
-    <div class="mt-6 text-sm italic">Last updated: {updatedAt}</div>
+    <div class="mt-6 text-right text-sm italic md:mt-10">
+      Last updated: {updatedAt}
+    </div>
   </div>
 </Layout>
