--- a/website/src/layouts/base/go-to-top-button.astro
+++ b/website/src/layouts/base/go-to-top-button.astro
@@ -1,5 +1,5 @@
 <button
-  class={"fixed bottom-8 right-6 rounded-md border border-black bg-white bg-opacity-80 px-1 py-0.5 dark:border-whiteish dark:bg-blackish dark:bg-opacity-80 hidden"}
+  class="bg-opacity-80 dark:bg-opacity-80 fixed right-6 bottom-8 hidden cursor-pointer rounded-md border border-black bg-white px-1 py-0.5 dark:border-whiteish dark:bg-blackish"
   aria-label="go to top"
   data-go-to-top
 >
