--- a/website/src/pages/404.astro
+++ b/website/src/pages/404.astro
@@ -28,10 +28,7 @@ import Layout from "@/layouts/base/layout.astro";
   };
 
   setUpGoBackButton();
-
-  const observer = new MutationObserver(setUpGoBackButton);
-  observer.observe(document.documentElement, {
-    childList: true,
-    subtree: false,
-  });
+  document.addEventListener("astro:after-swap", () =>
+    setUpGoBackButton()
+  );
 </script>
